<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flt.cellmonitor.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ToggleButton
                android:id="@+id/button_enable_monitor"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/toggle_btn_monitoring_enabled"
                android:textOff="@string/toggle_btn_monitoring_disabled"
                android:enabled="false"
                />

            <TextView
                android:id="@+id/label_current_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textStyle="bold"
                android:text="@string/label_current_state"
                />

            <TextView
                android:id="@+id/label_current_state_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_current_state"
                android:layout_alignTop="@id/label_current_state"
                android:layout_marginLeft="5dp"
                android:text="@string/monitoring_unknown"
                />

            <TextView
                android:id="@+id/label_current_tower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_current_state"
                android:textStyle="bold"
                android:text="@string/label_current_tower"
                />

            <TextView
                android:id="@+id/label_current_tower_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_current_tower"
                android:layout_alignTop="@id/label_current_tower"
                android:layout_marginLeft="5dp"
                android:text="@string/tower_unknown"
                />

            <TextView
                android:id="@+id/label_current_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_current_tower"
                android:textStyle="bold"
                android:text="@string/label_current_network"
                />

            <TextView
                android:id="@+id/label_current_network_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_current_network"
                android:layout_alignTop="@id/label_current_network"
                android:layout_marginLeft="5dp"
                android:text="@string/network_unknown"
                />

            <TextView
                android:id="@+id/label_current_data_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_current_network"
                android:textStyle="bold"
                android:text="@string/label_current_data_connection"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/label_current_data_connection_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_current_data_connection"
                android:layout_alignTop="@id/label_current_data_connection"
                android:layout_marginLeft="5dp"
                android:text="@string/network_unknown"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/label_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_current_data_connection"
                android:textStyle="bold"
                android:text="@string/label_current_location"
                />

            <TextView
                android:id="@+id/label_current_location_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_current_location"
                android:layout_alignTop="@id/label_current_location"
                android:layout_marginLeft="5dp"
                android:text="@string/location_unknown"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/log_heading"
        android:text="@string/label_log_heading"
        android:layout_below="@id/card_state"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <ListView
        android:id="@+id/list_log_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/log_heading">
    </ListView>

</RelativeLayout>
